[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "hey-ai"
version = "0.0.4"
authors = [
  { name="Sam Washburn", email="sam@samwashburn.com" },
]
description = "HEY! A helpful command line assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/samw3/hey"
Issues = "https://github.com/samw3/hey/issues"